--- a/css/_media.scss
+++ b/css/_media.scss
@@ -931,6 +931,19 @@ body {
 }
 
 @media (min-width: 1400px) {
+    .services_cards_item{
+        .card_item_img{
+            width: 120px;
+            height: 120px;
+            transition: 0.5s;
+            img{
+                width: 100%;
+            }
+            &:hover{
+                transform: scale(1.1);
+            }
+        }
+    }
 }
 
 // Preloader
@@ -1295,11 +1308,11 @@ body {
 // Intro
 
 @media (min-width: 320px) and (max-width: 575.98px) {
-    .footer{
-        .section_title{
-            padding: 0 17px !important;
-        }
-    }
+   .footer {
+      .section_title {
+         padding: 0 17px !important;
+      }
+   }
    .footer_wrapper {
       padding: 0 17px;
    }
@@ -1552,6 +1565,15 @@ body {
    .footer_icons_item {
       width: 108px !important;
       height: 108px !important;
+      &:hover {
+         transform: scale(1.2);
+      }
+   }
+   .footer_cat {
+      transition: all 0.6s !important;
+      &:hover {
+         transform: scale(1.2);
+      }
    }
    .footer_icons {
       gap: 40px !important;
