--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,10 @@
     min-height: 800px !important;
   }
 }
+.body_hide {
+  display: none !important;
+}
+
 @media (max-width: 1089.98px) {
   .desktop_menu {
     display: none !important;
@@ -54,12 +58,6 @@
   }
   header {
     position: relative;
-  }
-  .body_hide {
-    position: absolute;
-    top: -1500%;
-    left: 0;
-    opacity: 0 !important;
   }
   .right_0 {
     right: 0 !important;
