--- a/css/main.css
+++ b/css/main.css
@@ -3159,9 +3159,10 @@ ul.accordion-list li div.answer p {
 }
 
 .img_bg {
-  -webkit-transition: 0.7s;
-  transition: 0.7s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
   background-repeat: no-repeat;
+  background-size: cover !important;
 }
 
 .img_bg1 {
