--- a/css/main.scss
+++ b/css/main.scss
@@ -821,6 +821,19 @@ h1 {
       }
    }
 }
+.services_cards_item {
+   .card_item_img {
+      width: 120px;
+      height: 120px;
+      transition: 0.5s;
+      img {
+         width: 100%;
+      }
+      &:hover {
+         transform: scale(1.1);
+      }
+   }
+}
 .play_wrapper_col3 {
    width: 100%;
    display: flex;
