--- a/css/_media.scss
+++ b/css/_media.scss
@@ -932,7 +932,6 @@ body {
 }
 
 @media (min-width: 1400px) {
-
 }
 
 // Preloader
@@ -1304,6 +1303,11 @@ body {
          padding: 0 17px !important;
       }
    }
+   .footer_cat {
+      &:hover {
+         transform: scale(1.05) !important;
+      }
+   }
    .footer_wrapper {
       padding: 0 17px;
    }
@@ -1329,9 +1333,7 @@ body {
    .section_title {
       font-size: 40px !important;
    }
-   .img_bg {
-      background-size: cover !important;
-   }
+
    .footer_icons_item1 {
       padding: 16.67px 14px !important;
    }
@@ -1401,9 +1403,7 @@ body {
    .footer_icons {
       justify-content: center !important;
    }
-   .img_bg {
-      background-size: cover !important;
-   }
+
    .footer_icons_item1 {
       padding: 16.67px 14px !important;
    }
@@ -1443,9 +1443,7 @@ body {
    .footer_icons {
       justify-content: center !important;
    }
-   .img_bg {
-      background-size: cover !important;
-   }
+
    .footer_icons_item1 {
       padding: 16.67px 14px !important;
    }
@@ -1556,15 +1554,9 @@ body {
    .footer_icons_item {
       width: 108px !important;
       height: 108px !important;
-      &:hover {
-         transform: scale(1.2);
-      }
    }
    .footer_cat {
       transition: all 0.6s !important;
-      &:hover {
-         transform: scale(1.2);
-      }
    }
    .footer_icons {
       gap: 40px !important;
