--- a/css/main.css
+++ b/css/main.css
@@ -1238,6 +1238,10 @@
   .footer .section_title {
     padding: 0 17px !important;
   }
+  .footer_cat:hover {
+    -webkit-transform: scale(1.05) !important;
+            transform: scale(1.05) !important;
+  }
   .footer_wrapper {
     padding: 0 17px;
   }
@@ -1260,9 +1264,6 @@
   }
   .section_title {
     font-size: 40px !important;
-  }
-  .img_bg {
-    background-size: cover !important;
   }
   .footer_icons_item1 {
     padding: 16.67px 14px !important;
@@ -1337,9 +1338,6 @@
         -ms-flex-pack: center !important;
             justify-content: center !important;
   }
-  .img_bg {
-    background-size: cover !important;
-  }
   .footer_icons_item1 {
     padding: 16.67px 14px !important;
   }
@@ -1381,9 +1379,6 @@
     -webkit-box-pack: center !important;
         -ms-flex-pack: center !important;
             justify-content: center !important;
-  }
-  .img_bg {
-    background-size: cover !important;
   }
   .footer_icons_item1 {
     padding: 16.67px 14px !important;
@@ -1493,17 +1488,9 @@
     width: 108px !important;
     height: 108px !important;
   }
-  .footer_icons_item:hover {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-  }
   .footer_cat {
     -webkit-transition: all 0.6s !important;
     transition: all 0.6s !important;
-  }
-  .footer_cat:hover {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
   }
   .footer_icons {
     gap: 40px !important;
@@ -3123,6 +3110,10 @@ ul.accordion-list li div.answer p {
   transition: 0.5s;
   cursor: pointer;
 }
+.footer_icons_item:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
 .footer_icons_item * {
   cursor: pointer;
 }
@@ -3132,7 +3123,6 @@ ul.accordion-list li div.answer p {
 }
 .footer_icons_item1:hover .img_bg1 {
   background: url(../img/Footer/1_blue.svg);
-  background-repeat: no-repeat;
 }
 
 .footer_icons_item2 {
@@ -3140,7 +3130,6 @@ ul.accordion-list li div.answer p {
 }
 .footer_icons_item2:hover .img_bg2 {
   background: url(../img/Footer/2_blue.svg);
-  background-repeat: no-repeat;
 }
 
 .footer_icons_item3 {
@@ -3148,7 +3137,6 @@ ul.accordion-list li div.answer p {
 }
 .footer_icons_item3:hover .img_bg3 {
   background: url(../img/Footer/3_dark.svg);
-  background-repeat: no-repeat;
 }
 
 .footer_icons_item4 {
@@ -3156,7 +3144,6 @@ ul.accordion-list li div.answer p {
 }
 .footer_icons_item4:hover .img_bg4 {
   background: url(../img/Footer/4_blue.svg);
-  background-repeat: no-repeat;
 }
 
 .footer_icons_item5 {
@@ -3164,7 +3151,6 @@ ul.accordion-list li div.answer p {
 }
 .footer_icons_item5:hover .img_bg5 {
   background: url(../img/Footer/5.svg);
-  background-repeat: no-repeat;
 }
 
 .footer_icons_item6 {
@@ -3172,7 +3158,6 @@ ul.accordion-list li div.answer p {
 }
 .footer_icons_item6:hover .img_bg6 {
   background: url(../img/Footer/666.png);
-  background-repeat: no-repeat;
 }
 
 .img_bg {
@@ -3221,6 +3206,12 @@ ul.accordion-list li div.answer p {
 .footer_cat {
   margin-top: 80px;
   margin-bottom: 50px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+.footer_cat:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .footer_hach_code {
@@ -3241,6 +3232,8 @@ ul.accordion-list li div.answer p {
 }
 .footer_hach_code:hover {
   border: 1px solid rgba(255, 255, 255, 0.5);
+  -webkit-transform: scaleX(1.05);
+          transform: scaleX(1.05);
 }
 
 .footer_hach_code_title {
