--- a/css/main.css
+++ b/css/main.css
@@ -3122,42 +3122,42 @@ ul.accordion-list li div.answer p {
   padding: 30px 25px;
 }
 .footer_icons_item1:hover .img_bg1 {
-  background: url(../img/Footer/1_blue.svg);
+  background: url(../img/Footer/1_blue.png);
 }
 
 .footer_icons_item2 {
   padding: 30px 25px 30px 24px;
 }
 .footer_icons_item2:hover .img_bg2 {
-  background: url(../img/Footer/2_blue.svg);
+  background: url(../img/Footer/2_blue.png);
 }
 
 .footer_icons_item3 {
   padding: 30px;
 }
 .footer_icons_item3:hover .img_bg3 {
-  background: url(../img/Footer/3_dark.svg);
+  background: url(../img/Footer/3_black.png);
 }
 
 .footer_icons_item4 {
   padding: 30px;
 }
 .footer_icons_item4:hover .img_bg4 {
-  background: url(../img/Footer/4_blue.svg);
+  background: url(../img/Footer/4_blue.png);
 }
 
 .footer_icons_item5 {
   padding: 30px;
 }
 .footer_icons_item5:hover .img_bg5 {
-  background: url(../img/Footer/5.svg);
+  background: url(../img/Footer/5_gold.png);
 }
 
 .footer_icons_item6 {
   padding: 30px;
 }
 .footer_icons_item6:hover .img_bg6 {
-  background: url(../img/Footer/666.png);
+  background: url(../img/Footer/6_color.png);
 }
 
 .img_bg {
@@ -3168,37 +3168,37 @@ ul.accordion-list li div.answer p {
 }
 
 .img_bg1 {
-  background: url(../img/Footer/1telegram.svg);
+  background: url(../img/Footer/1.png);
   width: 32px;
   height: 26.67px;
 }
 
 .img_bg2 {
-  background: url(../img/Footer/2twitter.svg);
+  background: url(../img/Footer/2.png);
   width: 32.78px;
   height: 26.67px;
 }
 
 .img_bg3 {
-  background: url(../img/Footer/3reddit.svg);
+  background: url(../img/Footer/3.png);
   width: 26.67px;
   height: 26.67px;
 }
 
 .img_bg4 {
-  background: url(../img/Footer/4facebook.svg);
+  background: url(../img/Footer/4.png);
   width: 26.67px;
   height: 26.67px;
 }
 
 .img_bg5 {
-  background: url(../img/Footer/5m.svg);
+  background: url(../img/Footer/5.png);
   width: 26.67px;
   height: 26.67px;
 }
 
 .img_bg6 {
-  background: url(../img/Footer/6intagram.svg);
+  background: url(../img/Footer/6.png);
   width: 26.67px;
   height: 26.67px;
 }
