--- a/css/main.scss
+++ b/css/main.scss
@@ -1398,7 +1398,7 @@ ul.accordion-list {
 
    &:hover {
       .img_bg1 {
-         background: url(../img/Footer/1_blue.svg);
+         background: url(../img/Footer/1_blue.png);
       }
    }
 }
@@ -1407,7 +1407,7 @@ ul.accordion-list {
 
    &:hover {
       .img_bg2 {
-         background: url(../img/Footer/2_blue.svg);
+         background: url(../img/Footer/2_blue.png);
       }
    }
 }
@@ -1416,7 +1416,7 @@ ul.accordion-list {
 
    &:hover {
       .img_bg3 {
-         background: url(../img/Footer/3_dark.svg);
+         background: url(../img/Footer/3_black.png);
       }
    }
 }
@@ -1425,7 +1425,7 @@ ul.accordion-list {
 
    &:hover {
       .img_bg4 {
-         background: url(../img/Footer/4_blue.svg);
+         background: url(../img/Footer/4_blue.png);
       }
    }
 }
@@ -1434,7 +1434,7 @@ ul.accordion-list {
 
    &:hover {
       .img_bg5 {
-         background: url(../img/Footer/5.svg);
+         background: url(../img/Footer/5_gold.png);
       }
    }
 }
@@ -1443,7 +1443,7 @@ ul.accordion-list {
 
    &:hover {
       .img_bg6 {
-         background: url(../img/Footer/666.png);
+         background: url(../img/Footer/6_color.png);
       }
    }
 }
@@ -1453,32 +1453,32 @@ ul.accordion-list {
    background-size: cover !important;
 }
 .img_bg1 {
-   background: url(../img/Footer/1telegram.svg);
+   background: url(../img/Footer/1.png);
    width: 32px;
    height: 26.67px;
 }
 .img_bg2 {
-   background: url(../img/Footer/2twitter.svg);
+   background: url(../img/Footer/2.png);
    width: 32.78px;
    height: 26.67px;
 }
 .img_bg3 {
-   background: url(../img/Footer/3reddit.svg);
+   background: url(../img/Footer/3.png);
    width: 26.67px;
    height: 26.67px;
 }
 .img_bg4 {
-   background: url(../img/Footer/4facebook.svg);
+   background: url(../img/Footer/4.png);
    width: 26.67px;
    height: 26.67px;
 }
 .img_bg5 {
-   background: url(../img/Footer/5m.svg);
+   background: url(../img/Footer/5.png);
    width: 26.67px;
    height: 26.67px;
 }
 .img_bg6 {
-   background: url(../img/Footer/6intagram.svg);
+   background: url(../img/Footer/6.png);
    width: 26.67px;
    height: 26.67px;
 }
