--- a/css/main.css
+++ b/css/main.css
@@ -3195,11 +3195,17 @@ ul.accordion-list li div.answer p {
   width: 26.67px;
   height: 26.67px;
 }
-.img_bg6 stop {
-  -webkit-transition: 2s ease !important;
-  transition: 2s ease !important;
-}
 
+@media (max-width: 991.98px) {
+  .desktop_svg {
+    display: none;
+  }
+}
+@media (min-width: 992px) {
+  .mobile_svg {
+    display: none;
+  }
+}
 .footer_cat {
   margin-top: 80px;
   margin-bottom: 50px;
