--- a/css/main.scss
+++ b/css/main.scss
@@ -1387,7 +1387,6 @@ ul.accordion-list {
    transition: all 0.5s ease;
    cursor: pointer;
    &:hover {
-      //   background: #b33e3e;
       transform: scale(1.2);
    }
    * {
@@ -1489,11 +1488,18 @@ ul.accordion-list {
 .img_bg6 {
    width: 26.67px;
    height: 26.67px;
-   stop {
-    transition: 2s ease !important;
-}
 }
 
+@media (max-width: 991.98px) {
+   .desktop_svg {
+      display: none;
+   }
+}
+@media (min-width: 992px) {
+   .mobile_svg {
+      display: none;
+   }
+}
 .footer_cat {
    margin-top: 80px;
    margin-bottom: 50px;
