--- a/css/_media.scss
+++ b/css/_media.scss
@@ -1296,7 +1296,18 @@ body {
 }
 
 // Intro
-
+@media (max-width: 405.98px) {
+   .footer_hach_code_text {
+      font-size: 10px !important;
+      line-height: 14px !important;
+   }
+}
+@media (min-width: 406px) and (max-width: 575.98px) {
+   .footer_hach_code_text {
+      font-size: 14px !important;
+      line-height: 14px !important;
+   }
+}
 @media (min-width: 320px) and (max-width: 575.98px) {
    .footer {
       .section_title {
@@ -1365,17 +1376,11 @@ body {
          margin-bottom: 10px !important;
       }
    }
-}
-@media (max-width: 405.98px) {
-   .footer_hach_code_text {
-      font-size: 10px !important;
-      line-height: 14px !important;
-   }
-}
-@media (min-width: 406px) and (max-width: 575.98px) {
-   .footer_hach_code_text {
-      font-size: 14px !important;
-      line-height: 14px !important;
+   .services_cards_item {
+      .card_item_img {
+         width: 80px !important;
+         height: 80px !important;
+      }
    }
 }
 
@@ -1432,6 +1437,12 @@ body {
       .footer_hach_code_text {
          font-size: 18px !important;
          line-height: 14px !important;
+      }
+   }
+   .services_cards_item {
+      .card_item_img {
+         width: 80px !important;
+         height: 80px !important;
       }
    }
 }
