--- a/css/main.css
+++ b/css/main.css
@@ -1234,6 +1234,18 @@
     max-width: 515px;
   }
 }
+@media (max-width: 405.98px) {
+  .footer_hach_code_text {
+    font-size: 10px !important;
+    line-height: 14px !important;
+  }
+}
+@media (min-width: 406px) and (max-width: 575.98px) {
+  .footer_hach_code_text {
+    font-size: 14px !important;
+    line-height: 14px !important;
+  }
+}
 @media (min-width: 320px) and (max-width: 575.98px) {
   .footer .section_title {
     padding: 0 17px !important;
@@ -1299,17 +1311,9 @@
     line-height: 18px !important;
     margin-bottom: 10px !important;
   }
-}
-@media (max-width: 405.98px) {
-  .footer_hach_code_text {
-    font-size: 10px !important;
-    line-height: 14px !important;
-  }
-}
-@media (min-width: 406px) and (max-width: 575.98px) {
-  .footer_hach_code_text {
-    font-size: 14px !important;
-    line-height: 14px !important;
+  .services_cards_item .card_item_img {
+    width: 80px !important;
+    height: 80px !important;
   }
 }
 @media (min-width: 576px) and (max-width: 767.98px) {
@@ -1369,6 +1373,10 @@
   .footer_hach_code .footer_hach_code_text {
     font-size: 18px !important;
     line-height: 14px !important;
+  }
+  .services_cards_item .card_item_img {
+    width: 80px !important;
+    height: 80px !important;
   }
 }
 @media (min-width: 768px) and (max-width: 991.98px) {
