--- a/css/main.css
+++ b/css/main.css
@@ -396,6 +396,7 @@
     max-width: 360px !important;
     font-size: 25px !important;
     line-height: 30px !important;
+    padding: 0 17px;
   }
   .how_it_works_info .header_info_col_buttons {
     max-width: 300px !important;
@@ -406,17 +407,72 @@
   .how_it_works {
     background: #101932 !important;
   }
-  .img_blue {
-    display: none !important;
-  }
-  .img_gold {
-    display: none !important;
-  }
-  .img_red {
-    display: none !important;
+  .img_absolute {
+    max-width: 70px !important;
   }
   .cat_img_earth {
     display: none;
+  }
+  .how_it_works_info .header_info_col_buttons {
+    max-width: 300px !important;
+  }
+  .how_it_works_info .reb_btn {
+    padding: 10px 45px 15px !important;
+  }
+  .cat_img_earth {
+    display: none;
+  }
+}
+@media (max-width: 356.98px) {
+  .img_blue {
+    right: 10% !important;
+    top: 315px !important;
+    border: 17px solid rgba(0, 150, 242, 0) !important;
+  }
+  .img_blue:hover {
+    border: 17px solid rgba(0, 150, 242, 0.4) !important;
+  }
+  .img_gold {
+    right: 22% !important;
+    bottom: 70px !important;
+    border: 17px solid rgba(255, 148, 41, 0) !important;
+  }
+  .img_gold:hover {
+    border: 17px solid rgba(255, 148, 41, 0.4) !important;
+  }
+  .img_red {
+    left: 10% !important;
+    top: 345px !important;
+    border: 17px solid rgba(225, 29, 46, 0) !important;
+  }
+  .img_red:hover {
+    border: 17px solid rgba(225, 29, 46, 0.4) !important;
+  }
+}
+@media (min-width: 357px) and (max-width: 575.98px) {
+  .img_blue {
+    right: 10% !important;
+    top: 270px !important;
+    border: 17px solid rgba(0, 150, 242, 0) !important;
+  }
+  .img_blue:hover {
+    border: 17px solid rgba(0, 150, 242, 0.4) !important;
+  }
+  .img_gold {
+    right: 22% !important;
+    bottom: 70px !important;
+    border: 17px solid rgba(255, 148, 41, 0) !important;
+  }
+  .img_gold:hover {
+    border: 17px solid rgba(255, 148, 41, 0.4) !important;
+  }
+  .img_red {
+    left: 16% !important;
+    top: 298px !important;
+    border: 17px solid rgba(225, 29, 46, 0) !important;
+  }
+  .img_red:hover {
+    border: 17px solid rgba(225, 29, 46, 0.4) !important;
   }
 }
 @media (min-width: 576px) and (max-width: 767.98px) {
@@ -447,17 +503,41 @@
   .how_it_works {
     background: #101932 !important;
   }
+  .img_absolute {
+    max-width: 70px !important;
+  }
   .img_blue {
-    display: none !important;
+    right: 20% !important;
+    top: 316px !important;
+    border: 17px solid rgba(0, 150, 242, 0) !important;
+  }
+  .img_blue:hover {
+    border: 17px solid rgba(0, 150, 242, 0.4) !important;
   }
   .img_gold {
-    display: none !important;
+    right: 31% !important;
+    bottom: 115px !important;
+    border: 17px solid rgba(255, 148, 41, 0) !important;
+  }
+  .img_gold:hover {
+    border: 17px solid rgba(255, 148, 41, 0.4) !important;
   }
   .img_red {
-    display: none !important;
+    left: 27% !important;
+    top: 360px !important;
+    border: 17px solid rgba(225, 29, 46, 0) !important;
+  }
+  .img_red:hover {
+    border: 17px solid rgba(225, 29, 46, 0.4) !important;
   }
   .cat_img_earth {
     display: none;
+  }
+  .how_it_works_info .header_info_col_buttons {
+    max-width: 300px !important;
+  }
+  .how_it_works_info .reb_btn {
+    padding: 10px 45px 15px !important;
   }
 }
 @media (min-width: 768px) and (max-width: 991.98px) {
@@ -2039,6 +2119,7 @@ h1 span {
   color: #fff;
   font-family: verdana;
   font-size: 37px;
+  z-index: 222;
 }
 
 .wrap {
