--- a/css/main.scss
+++ b/css/main.scss
@@ -459,6 +459,7 @@ h1 {
    color: #fff;
    font-family: verdana;
    font-size: 37px;
+   z-index: 222;
 }
 // ==================================
 // ==================================
