--- a/css/main.scss
+++ b/css/main.scss
@@ -1277,6 +1277,7 @@ h1 {
 }
 .play_wrapper_col3_item2_subitem_img {
    transition: 0.5s;
+   height: fit-content !important;
    cursor: pointer;
    * {
       cursor: pointer;
