--- a/css/_media.scss
+++ b/css/_media.scss
@@ -127,6 +127,7 @@ body {
 //      }
 // }
 @media (min-width: 320px) and (max-width: 575.98px) {
+
    nav {
       padding: 0 15px !important;
       align-items: center;
@@ -375,7 +376,7 @@ body {
          padding: 0 17px;
       }
       .header_info_col_buttons {
-         max-width: 300px !important;
+         max-width: 100% !important;
          margin-top: 294px !important;
          /* width: 260px !important; */
          height: 46px !important;
@@ -480,6 +481,7 @@ body {
          line-height: 30px !important;
       }
       .header_info_col_buttons {
+        max-width: 100% !important;
          margin-top: 350px !important;
       }
    }
