--- a/css/main.css
+++ b/css/main.css
@@ -399,7 +399,7 @@
     padding: 0 17px;
   }
   .how_it_works_info .header_info_col_buttons {
-    max-width: 300px !important;
+    max-width: 100% !important;
     margin-top: 294px !important;
     /* width: 260px !important; */
     height: 46px !important;
@@ -498,6 +498,7 @@
     line-height: 30px !important;
   }
   .how_it_works_info .header_info_col_buttons {
+    max-width: 100% !important;
     margin-top: 350px !important;
   }
   .how_it_works {
