--- a/css/_media.scss
+++ b/css/_media.scss
@@ -583,6 +583,11 @@ body {
    .img_red {
       left: 20% !important;
    }
+   #toTop {
+      &:hover {
+         box-shadow: 0px 0px 30px 4px rgb(255 255 255);
+      }
+   }
 }
 
 @media (min-width: 1200px) and (max-width: 1399.98px) {
@@ -595,9 +600,19 @@ body {
    .img_red {
       left: 20% !important;
    }
+   #toTop {
+      &:hover {
+         box-shadow: 0px 0px 30px 4px rgb(255 255 255);
+      }
+   }
 }
 
 @media (min-width: 1400px) {
+   #toTop {
+      &:hover {
+         box-shadow: 0px 0px 30px 4px rgb(255 255 255);
+      }
+   }
 }
 
 // 3_section
