--- a/css/main.css
+++ b/css/main.css
@@ -594,6 +594,10 @@
   .img_red {
     left: 20% !important;
   }
+  #toTop:hover {
+    -webkit-box-shadow: 0px 0px 30px 4px rgb(255, 255, 255);
+            box-shadow: 0px 0px 30px 4px rgb(255, 255, 255);
+  }
 }
 @media (min-width: 1200px) and (max-width: 1399.98px) {
   .img_blue {
@@ -604,6 +608,16 @@
   }
   .img_red {
     left: 20% !important;
+  }
+  #toTop:hover {
+    -webkit-box-shadow: 0px 0px 30px 4px rgb(255, 255, 255);
+            box-shadow: 0px 0px 30px 4px rgb(255, 255, 255);
+  }
+}
+@media (min-width: 1400px) {
+  #toTop:hover {
+    -webkit-box-shadow: 0px 0px 30px 4px rgb(255, 255, 255);
+            box-shadow: 0px 0px 30px 4px rgb(255, 255, 255);
   }
 }
 @media (min-width: 320px) and (max-width: 575.98px) {
@@ -2134,6 +2148,8 @@ h1 span {
   font-family: verdana;
   font-size: 37px;
   z-index: 222;
+  -webkit-transition: 0.35s;
+  transition: 0.35s;
 }
 
 .wrap {
