--- a/css/main.scss
+++ b/css/main.scss
@@ -460,6 +460,7 @@ h1 {
    font-family: verdana;
    font-size: 37px;
    z-index: 222;
+   transition: 0.35s;
 }
 // ==================================
 // ==================================
