--- a/css/_media.scss
+++ b/css/_media.scss
@@ -403,6 +403,15 @@ body {
    .cat_img_earth {
       display: none;
    }
+   .trend {
+    .header_info_col_buttons{
+        max-width: 100% !important;
+        padding: 0 !important;
+    }
+      .reb_btn {
+         white-space: nowrap !important;
+      }
+   }
 }
 @media (max-width: 356.98px) {
    .img_blue {
@@ -463,6 +472,15 @@ body {
    }
 }
 @media (min-width: 576px) and (max-width: 767.98px) {
+   .trend {
+    .header_info_col_buttons{
+        max-width: 100% !important;
+        padding: 0 !important;
+    }
+      .reb_btn {
+         white-space: nowrap !important;
+      }
+   }
    .partners_icons {
       margin-bottom: 35px !important;
       flex-wrap: wrap;
