--- a/css/main.scss
+++ b/css/main.scss
@@ -185,6 +185,10 @@ body {
    &::-webkit-scrollbar-button {
       display: none;
    }
+
+   &:not(.loaded) {
+      overflow: hidden;
+   }
 }
 
 // ==================================
